# ajson

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  cli.py  demo.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: docker-publish.yml
ajson/: __init__.py  __main__.py  parser.py
examples/: aip-contract.ajson
mcp-server/: ajson_mcp_server.py
tests/: test_parser.py
tests/fixtures/: contract_template.ajson  simple_contract.ajson  witnessos_receipt.ajson
