[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ajson-spec"
version = "0.1.1"
description = "Agent JSON — a superset of JSON for agent-to-agent manifests with deterministic compilation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Empire Labs Pty Ltd", email = "contact@empirelabs.com.au"}
]
maintainers = [
    {name = "Sovereign", email = "contact@empirelabs.com.au"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/narko4u/ajson"
Repository = "https://github.com/narko4u/ajson"
Documentation = "https://github.com/narko4u/ajson#readme"

[project.scripts]
ajson = "ajson.cli:main"

[tool.setuptools.packages.find]
include = ["ajson*"]
exclude = ["tests*"]
